# hello_world_dist

./: Cargo.toml  LICENSE-MIT  README.md  dist-workspace.toml  release-plz.toml
.github/workflows/: release-plz.yml  release.yml
src/: main.rs  release-plz.toml
wix/: main.wxs
