[package]
name = "hello_world_dist"
version = "0.1.0" # release-plz будет обновлять эту версию
edition = "2021"
repository = "https://github.com/AndSemenoff/hello_world_dist/"
authors = ['Andrey Semenov']

[dependencies]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# --- Конфигурация cargo-dist ---
[package.metadata.dist]
# Сообщаем cargo-dist, что мы используем CI GitHub
ci = ["github"]
# Собираем ТОЛЬКО под 64-bit Windows (MSVC)
targets = ["x86_64-pc-windows-msvc"]
# Включаем генерацию установщиков.
# 'powershell' - это скрипт, который обеспечивает автообновление.
# 'msi' - стандартный установщик Windows.
installers = ["msi"]

install-updater = true

[package.metadata.wix]
upgrade-guid = "23DF080C-EB3D-435E-A2EC-62F814FABB98"
path-guid = "51AE3D4B-61E7-44C0-A6BC-21558F33BE4F"
license = false
eula = false
