[package]
name = "hello_world_dist"
version = "0.5.0" 
edition = "2024"
license = "MIT OR Apache-2.0"

repository = "https://github.com/AndSemenoff/hello_world_dist/"
authors = ['Andrey Semenov']
homepage = "https://github.com/AndSemenoff/hello_world_dist/"
readme = "README.md"
description = "A cool application that solves all your problems!"
license-files = ["LICENSE-MIT", "LICENSE-APACHE"]

[dependencies]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

github-attestations = true

# --- Конфигурация cargo-dist ---
[package.metadata.dist]
# Сообщаем cargo-dist, что мы используем CI GitHub
ci = ["github"]
# Собираем ТОЛЬКО под 64-bit Windows (MSVC)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
# Включаем генерацию установщиков.
# 'powershell' - это скрипт, который обеспечивает автообновление.
# 'msi' - стандартный установщик Windows.
installers = ["msi"]

install-updater = true

include = [
   "favicon.ico",
   "README.md",
]

[package.metadata.wix]
upgrade-guid = "23DF080C-EB3D-435E-A2EC-62F814FABB98"
path-guid = "51AE3D4B-61E7-44C0-A6BC-21558F33BE4F"
license = "LICENSE-MIT"
product-icon = "favicon.ico"
eula = false
